Fix spacing of section-nav on two lines
[Finishes #80577698]

- Also update lists to have simpler names

--- a/src/pivotal-ui/components/lists.css.scss
+++ b/src/pivotal-ui/components/lists.css.scss
@@ -25,7 +25,7 @@ This section contains different list behaviors. See [lists](/elements.html?targe
 
 /*doc
 ---
-title: Inline List
+title: Inline
 name: list-inline
 parent: lists
 ---
@@ -52,7 +52,7 @@ An inline list is one of the three methods for laying out content (including gri
 
 /*doc
 ---
-title: Ordered List
+title: Ordered
 name: list-ordered
 parent: lists
 ---
@@ -71,7 +71,7 @@ parent: lists
 
 /*doc
 ---
-title: Unordered List
+title: Unordered
 name: list-unordered
 parent: lists
 ---
@@ -96,7 +96,7 @@ parent: lists
 
 /*doc
 ---
-title: Unstyled List
+title: Unstyled
 name: list-unstyled
 parent: lists
 ---
@@ -116,7 +116,7 @@ Places all list items on a single line with `display: inline-block;` and some li
 
 /*doc
 ---
-title: Inline Divider List
+title: Inline Divider
 name: list-inline-divider
 parent: lists
 ---
@@ -167,7 +167,7 @@ also adds a simple gray border (add `.list-inline-divider-light` to make the bor
 
 /*doc
 ---
-title: Breadcrumb List
+title: Breadcrumb
 name: list-breadcrumb
 parent: lists
 ---
@@ -228,7 +228,7 @@ Breadcrumbs use their own monospace font-family.
 
 /*doc
 ---
-title: List Group
+title: List group
 name: list-group
 parent: lists
 ---
@@ -248,7 +248,7 @@ Use this list when you need simple gray borders between items
 
 /*doc
 ---
-title: Addable List
+title: Addable
 name: list_addable
 parent: lists_js
 ---
@@ -336,7 +336,7 @@ New elements fade in
 
 /*doc
 ---
-title: Event List
+title: Event
 name: list_event
 parent: lists
 ---
@@ -503,7 +503,7 @@ This is a special list-group, with styles per-event for colors and icons
 
 /*doc
 ---
-title: Vertical Divider List
+title: Vertical Divider
 name: list-vertical-divider
 parent: lists
 ---
@@ -575,7 +575,7 @@ right min-height.
 
 /*doc
 ---
-title: Steps List
+title: Steps
 name: list-steps
 parent: lists
 ---
@@ -635,7 +635,7 @@ Use this list when you need to show the steps in a flow.
 
 /*doc
 ---
-title: Checked List
+title: Checked
 name: list-checked
 parent: lists
 ---
